k8-sample-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-java-app
  namespace: dept-1
  labels:
    creation_method: manual
    env: prod
    app: java-app
spec:
  containers:
    - name: sample-java-app
      image: gurupatra/sample-app
      ports:
        - containerPort: 8080
          protocol: TCP
      livenessProbe:
        initialDelaySeconds: 10
        periodSeconds: 5
        httpGet:
          path: /healthCheck
          port: 8080
      readinessProbe:
        initialDelaySeconds: 5
        periodSeconds: 5
        httpGet:
          path: /healthCheck
          port: 8080
