k8-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oradata-svc
  namespace: dept-1
spec:
  ports:
  - port: 1521
