k8-nodeport-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-nodeport
  namespace: dept-1
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    nodePort: 30017
  selector:
    app: mongodb
  externalTrafficPolicy: Local
