k8-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-nodeport
  namespace: dept-1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: java-app
  externalTrafficPolicy: Local
