k8-oradata-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: oradata-svc
  namespace: dept-1
subsets:
  - addresses:
      - ip: 192.168.99.1
      - ip: 192.168.0.7
    ports:
    - port: 1521
