k8-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc-1
  namespace: dept-1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: java-app
