k8-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: dept-1
spec:
  tls:
  - hosts:
    - ingress.example.com
    secretName: sample-tls-secret
  rules:
  - host: ingress.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-nodeport
          servicePort: 80
